:sparkles: :shit: :shit: yarn i -D node-sass but, It is not working :cold_sweat: https://www.webpagefx.com/tools/emoji-cheat-sheet/

--- a/src/index.html
+++ b/src/index.html
@@ -2,9 +2,10 @@
 <html>
 <head>
   <title>Entry Point</title>
+  <!-- <script type="text/css" rel="stylesheet" src="style/app.scss"></script> -->
+  <script type="text/javascript" src="index.js"></script>
 </head>
 <body>
-  <script src="./index.js"></script>
   <h1>Hello World</h1>
 </body>
 </html>
