:bug: hello world !

--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,5 @@
-<!DOCTYPE html>
 <html>
-<head>
-  <title>Entry Point</title>
-  <!-- <script type="text/css" rel="stylesheet" src="style/app.scss"></script> -->
-  <script type="text/javascript" src="index.js"></script>
-</head>
 <body>
-  <h1>Hello World</h1>
+  <script src="./index.js"></script>
 </body>
 </html>
