--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,9 @@
 <html>
-<body>
+<head>
   <script src="./index.js"></script>
+</head>
+<body>
+  <h1>Hello The World</h1>
+  <h2>subtitle</h2>
 </body>
 </html>
